# butter-core

./: .gitignore  .travis.yml  Makefile  README.md  butter-core.cabal  test2.torrent
benchmark/: decode.hs
src/Butter/: Core.hs  Torrent.hs
src/Butter/Core/: BEncode.hs  Bencode.hs  Block.hs  BlockDownload.hs  MetaInfo.hs  Peer.hs  PeerManager.hs  PeerWire.hs  Torrent.hs  Tracker.hs  Util.hs
src/Butter/Core/Tracker/: Client.hs
test/: ButterCoreBEncodeSpec.hs  ButterCoreBencodeSpec.hs  ButterCoreMetaInfoSpec.hs  ButterCoreTorrentSpec.hs  HPC.hs  test1-filenode  test1-infohash  test1-pieces  test2.torrent
test/Butter/Core/: BlockDownloadSpec.hs  MetaInfoSpec.hs  PeerSpec.hs  PeerWireSpec.hs
