name: butter-core
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Pedro Tacla Yamada 2014
maintainer: tacla.yamada@gmail.com
homepage: https://github.com/yamadapc/butter-core
synopsis: Core logic for Butter, a toy torrent client written in haskell.
description:
    This module is supposed to hold the core logic required to
    build a torrent client. Most parsing functions and
    downloading functions for butter will fall onto this
    module, in a cleanly tested and reusable form.
category: Web
author: Pedro Tacla Yamada

library
    build-depends:
        split >=0.2 && <0.3,
        binary >=0.7 && <0.8,
        stm >=2.4 && <3,
        base >=4.7 && <4.8,
        cryptohash >=0.11 && <0.12,
        bytestring >=0.10 && <0.11,
        bencoding >=0.4 && <0.5,
        http-client >=0.4 && <0.5
    exposed-modules:
        Butter.Core
        Butter.Core.Peer
        Butter.Core.Torrent
        Butter.Core.Tracker
        Butter.Core.Util
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src

test-suite butter-core-spec
    build-depends:
        split >=0.2 && <0.3,
        binary >=0.7 && <0.8,
        stm >=2.4 && <3,
        base >=4 && <5,
        base16-bytestring >=0.1 && <0.2,
        cryptohash >=0.11 && <0.12,
        hspec >=1.11 && <2,
        bencoding >=0.4 && <0.5,
        bytestring >=0.10 && <0.11,
        http-client >=0.4 && <0.5
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src test
