name: butter-core
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Pedro Tacla Yamada 2014
maintainer: tacla.yamada@gmail.com
homepage: https://github.com/yamadapc/butter-core
synopsis: Core logic for Butter, a toy torrent client written in haskell.
description:
    This module is supposed to hold the core logic required to
    build a torrent client. Most parsing functions and
    downloading functions for butter will fall onto this
    module, in a cleanly tested and reusable form.
category: Web
author: Pedro Tacla Yamada

flag no-tests
    description: Don't build test suites
    default: False

library
    build-depends:
                    async >=2.0 && <2.1
                  , base >=4.7 && <4.8
                  , bencoding >=0.4 && <0.5
                  , binary >=0.7 && <0.8
                  , binary-conduit >=1 && <2
                  , bytestring >=0.10 && <0.11
                  , conduit >=1.2 && <1.3
                  , conduit-extra >=1.1 && <1.2
                  , containers >=0.5 && <0.6
                  , cryptohash >=0.11 && <0.12
                  , exceptions >=0.6 && <0.7
                  , http-client >=0.4 && <0.5
                  , lens >=4 && <5
                  , lifted-base >0.2 && <0.3
                  , mtl >=2.1 && <2.2
                  , network >=2.4 && <2.5
                  , old-locale <1.1
                  , split >=0.2 && <0.3
                  , stm >=2.4.3 && <3
                  , stm-conduit >=2.5 && <3
                  , time >=1.4 && <2
                  , transformers >=0.3 && <0.4
                  , unix >=2.7 && <2.8
                  , vector
    exposed-modules:
        Butter.Core
        Butter.Core.Block
        Butter.Core.BlockDownload
        Butter.Core.MetaInfo
        Butter.Core.Peer
        Butter.Core.PeerWire
        Butter.Core.PeerManager
        Butter.Core.Torrent
        Butter.Core.Tracker.Client
        Butter.Core.Util
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -threaded -O2
    cc-options: -O3 -msse4 -mpopcnt

test-suite hspec
    if !flag(no-tests)
      build-depends:  QuickCheck >=2.6 && <3
                    , async >=2.0 && <2.1
                    , base >=4 && <5
                    , base16-bytestring >=0.1 && <0.2
                    , bencoding >=0.4 && <0.5
                    , binary >=0.7 && <0.8
                    , binary-conduit >=1 && <2
                    , bytestring >=0.10 && <0.11
                    , conduit >=1.2 && <1.3
                    , conduit-extra >=1.1 && <1.2
                    , containers >=0.5 && <0.6
                    , cryptohash >=0.11 && <0.12
                    , exceptions >=0.6 && <0.7
                    , hspec >=1.11 && <2
                    , http-client >=0.4 && <0.5
                    , lens >=4 && <5
                    , lifted-base >0.2 && <0.3
                    , mtl >=2.1 && <2.2
                    , network >=2.4 && <2.5
                    , old-locale <1.1
                    , split >=0.2 && <0.3
                    , stm >=2.4 && <3
                    , stm-conduit >=2.5 && <3
                    , time >=1.4 && <2
                    , transformers >=0.3 && <0.4
                    , unix >=2.7 && <2.8
                    , vector
      buildable: True
    else
      buildable: False
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    default-language: Haskell2010
    hs-source-dirs: src test

test-suite doctest
    if !flag(no-tests)
      build-depends:
                      Glob >=0.7 && <0.8
                    , base -any
                    , butter-core -any
                    , doctest >=0.9 && <1
                    , vector
      buildable: True
    else
      buildable: False
    type: exitcode-stdio-1.0
    main-is: DocTest.hs
    default-language: Haskell2010
    hs-source-dirs: test
